edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___3_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābādhikinī_dpd" class="word-info-heading-dpd">ābādhikinī</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>ābādhikinī</span></td></tr><tr><td>Grammar</td><td><span>fem, from ābādhika</span></td></tr><tr><td>English</td><td><span><strong>sick woman; ill woman</strong></span></td></tr><tr><td></td><td><span>lit. oppressed</span></td></tr><tr><td>Root</td><td><span>√bādh<sup>･</sup>1 a (to press, oppress)</span></td></tr><tr><td>Construction</td><td><span>ā + √bādh + a + ika + inī<br/>ābādhika + inī</span></td></tr><tr><td>Derivative</td><td><span>taddhita (inī)</span></td></tr><tr><td>Sanskrit</td><td><span><i>ābādha + ika</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bādh</i>&nbsp;cl. 1&nbsp;(to oppress)</span></td></tr></tbody>
    </table>
    <br /><span>ehi tvaṃ, ambho purisa, yen'ayyo ānando ten'upasaṅkama, upasaṅkamitvā mama vacanena ayyassa ānandassa pāde sirasā vanda, itthannāmā, bhante, bhikkhunī <b>ābādhikinī</b> dukkhitā bāḷhagilānā.</span><br /><span class="sutta-source-dpd"><i>AN 4.159 bhikkhunīsuttaṃ</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: ābādhikinī]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

