edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___4_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="abahulīkata_dpd" class="word-info-heading-dpd">abahulīkata</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abahulīkata</span></td></tr><tr><td>Grammar</td><td><span>pp of na bahulīkaroti, comp vb, neg</span></td></tr><tr><td>English</td><td><span><strong>not practised often; not fully developed; not cultivated; not increased</strong></span></td></tr><tr><td></td><td><span>lit. not made a lot</span></td></tr><tr><td>Construction</td><td><span>na > a + bahula > bahulī + kata</span></td></tr><tr><td>Phonetic Changes</td><td><span>a > ī before √kar</span></td></tr><tr><td>Compound</td><td><span>kammadhāraya (na + bahulīkata)</span></td></tr><tr><td>Antonym</td><td><span>bahulīkata</span></td></tr><tr><td>Sanskrit</td><td><span><i>abahulīkṛta</i></span></td></tr></tbody>
    </table>
    <br /><span>evam'eva kho, bhikkhave, yassa kassaci bhikkhuno kāyagatāsati abhāvitā <b>abahulīkatā</b>, taṃ cakkhu āviñchati manāpiyesu rūpesu, amanāpiyā rūpā paṭikūlā honti</span><br /><span class="sutta-source-dpd"><i>SN 35.247 chappāṇakasuttaṃ</i></span><br /><br /><span>evam'eva kho, bhikkhave, yassa kassaci bhikkhuno mettācetovimutti abhāvitā <b>abahulīkatā</b> so suppadhaṃsiyo hoti amanussehi.</span><br /><span class="sutta-source-dpd"><i>SN 20.3 kulasuttaṃ</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: abahulīkata]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

