edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___6_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="abala_2_dpd" class="word-info-heading-dpd">abala 2</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abala</span></td></tr><tr><td>Grammar</td><td><span>adj, neg</span></td></tr><tr><td>English</td><td><span><strong>weak; feeble</strong></span></td></tr><tr><td></td><td><span>lit. not strong</span></td></tr><tr><td>Root</td><td><span>√bal<sup>×</sup>1 a (to be strong, live)</span></td></tr><tr><td>Construction</td><td><span>na > a + √bal + a</span></td></tr><tr><td>Derivative</td><td><span>kita (a)</span></td></tr><tr><td>Compound</td><td><span>kammadhāraya (na + bala)</span></td></tr><tr><td>Antonym</td><td><span>bala</span></td></tr><tr><td>Sanskrit</td><td><span><i>abala</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bal</i>&nbsp;cl. 2&nbsp;(to be strong)</span></td></tr></tbody>
    </table>
    <br /><span>so vata, bhikkhave, bhikkhu ime pañca āvaraṇe nīvaraṇe cetaso ajjhāruhe paññāya dubbalīkaraṇe appahāya, <b>abalāya</b> paññāya dubbalāya att'atthaṃ vā ñassati</span><br /><span class="sutta-source-dpd"><i>AN 5.51 āvaraṇasuttaṃ</i></span><br /><br /><span>jiṇṇo'ham'asmi <b>abalo</b> vītavaṇṇo,<br/>nettā na suddhā savanaṃ na phāsu,<br/>m'āhaṃ nassaṃ momuho antarāva,<br/>ācikkha dhammaṃ yam'ahaṃ vijaññaṃ,<br/>jātijarāya idha vippahānaṃ.</span><br /><span class="sutta-source-dpd"><i>SNP 71 piṅgiya māṇava pucchā<br/>pārāyanavaggo 16</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: abala 2]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

