edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___7.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="abalabala_dpd" class="word-info-heading-dpd">abalabala</h4>

    <table class="word-info-table-dpd">
      <tbody><tr><td>Pāli</td><td><span>abalabala</span></td></tr><tr><td>Grammar</td><td><span>adj, comp</span></td></tr><tr><td>English</td><td><span><strong>weak and strong</strong></span></td></tr><tr><td></td><td><span>lit. LM8</span></td></tr><tr><td>Root</td><td><span>√bal<sup>×</sup>1.1 a (to be strong, live)</span></td></tr><tr><td></td><td><span>RiC8 in comps</span></td></tr><tr><td>Construction</td><td><span>abala + bala</span></td></tr><tr><td>Compound</td><td><span>dvanda (abala <b>ca </b>bala <b>ca</b>)</span></td></tr><tr><td>Sanskrit</td><td><span><i>abala + bala</i></span></td></tr><tr><td>Sanskrit Root</td><td><span><i>√bal</i>&nbsp;cl. 7</span></td></tr></tbody>
    </table>
    <br /><span>nivatth'avatthen'eva "gehato" nikkhamitvā paramasallekhavuttiko'pi <b>abalabalo</b> amandamando viya paresaṃ acittakarūpena hīḷitaparibhūto hutvā gāmanigamarājadhānīsu ekarattivāsen'eva vicarati.</span><br /><span class="sutta-source-dpd"><i>CPa 3.15 mahālomahaṃsacariyāvaṇṇanā</i></span><br /><br /><div>
  <a class="dictionary-feedback-link-dpd" href="fb_url?entry.267696921=host url&entry.1433863141=host version" target="_blank">spot a mistake in the dictionary? fix it here!</a>
</div>
<br />

</div>

<div>
[ITABLE: abalabala]
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

