edpdgen_lib/src/stardict/input_parsers/snapshots/edpdgen_lib__stardict__input_parsers__dpd__tests__word_data_tests___8_false.snap
---
source: edpdgen_lib/src/stardict/input_parsers/dpd.rs
expression: word_data

---
  <hr />
  <div>
    <h4 id="ābandhaka_dpd" class="word-info-heading-dpd">ābandhaka</h4>

<i>NOTE: Dictionary information for &quot;<strong>ābandhaka</strong>&quot; is still being compiled. Please check back with the author for updates.</i>
<br />
<br />

</div>

<div>
<details>
<summary>Inflection Table</summary>
[ITABLE: ābandhaka]
</details>
</div>
<br />

<div>
<a class="dictionary-word-back-to-top-link-dpd" href="#" onclick="document.getElementById('top-dpd').parentElement.previousElementSibling.scrollIntoView();return false;">&#x25B2; back to top</a>
</div>

